# algorithm-engineering

./: .gitignore
assignments/01/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task3_spec.md
